--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sarthak_vaishampayan",
+  "homepage": "https://SarthakVaishampayan.github.io/React_P",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
